--- a/midulcebendicion/index.html
+++ b/midulcebendicion/index.html
@@ -20,6 +20,14 @@
     <section class="categoria">
       <h2>🍰 Herramientas</h2>
       <div class="productos">
+        <!--producto 1 -->
+        <div class="producto">
+          <img src="img/herramientas/espatula.jpg" alt="Espátula Rosa" />
+          <h3>Espátula Rosa</h3>
+          <p>$3.500</p>
+          <a href="https://wa.me/51922857548?text=Hola%2C%20quiero%20comprar%20la%20Espátula%20Rosa" target="_blank">Pedir por WhatsApp</a>
+        </div>
+        <!--producto 2 -->
         <div class="producto">
           <img src="img/herramientas/espatula.jpg" alt="Espátula Rosa" />
           <h3>Espátula Rosa</h3>
@@ -60,4 +68,5 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
