--- a/midulcebendicion/index.html
+++ b/midulcebendicion/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi Tienda de Repostería</title>
+  <title>Mi Dulce Bendicion</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
@@ -68,5 +68,6 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
