--- a/midulcebendicion/index.html
+++ b/midulcebendicion/index.html
@@ -10,14 +10,14 @@
 
   <!-- Logo de presentación -->
   <div id="intro">
-    <img src="img/logo.png" alt="Logo de la tienda" class="logo-inicio" />
+    <img src="img/logo.png" alt="Logo de presentación" class="logo-inicio" />
   </div>
 
   <!-- Contenedor principal -->
-  <main id="catalogo">
+  <main id="catalogo" class="oculto">
     
     <!-- Herramientas -->
-    <section class="categoria">
+    <section class="categoria" id="herramientas">
       <h2>🍰 Herramientas</h2>
       <div class="productos">
         <!--producto 1 -->
@@ -68,6 +68,7 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
