--- a/midulcebendicion/index.html
+++ b/midulcebendicion/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi Dulce Bendicion</title>
+  <title>Mi Dulce Bendición</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
@@ -13,21 +13,26 @@
     <img src="img/logo.png" alt="Logo de presentación" class="logo-inicio" />
   </div>
 
-  <!-- Contenedor principal -->
+  <!-- Encabezado (inicialmente oculto) -->
+  <header class="encabezado oculto">
+    <img src="img/logo.png" alt="Logo encabezado" class="logo-encabezado" />
+  </header>
+
+  <!-- Contenedor principal del catálogo -->
   <main id="catalogo" class="oculto">
     
     <!-- Herramientas -->
     <section class="categoria" id="herramientas">
       <h2>🍰 Herramientas</h2>
       <div class="productos">
-        <!--producto 1 -->
+        <!-- Producto 1 -->
         <div class="producto">
           <img src="img/herramientas/espatula.jpg" alt="Espátula Rosa" />
           <h3>Espátula Rosa</h3>
           <p>$3.500</p>
           <a href="https://wa.me/51922857548?text=Hola%2C%20quiero%20comprar%20la%20Espátula%20Rosa" target="_blank">Pedir por WhatsApp</a>
         </div>
-        <!--producto 2 -->
+        <!-- Producto 2 -->
         <div class="producto">
           <img src="img/herramientas/espatula.jpg" alt="Espátula Rosa" />
           <h3>Espátula Rosa</h3>
@@ -68,7 +73,3 @@
   <script src="main.js"></script>
 </body>
 </html>
-
-
-
-
