--- a/midulcebendicion/index.html
+++ b/midulcebendicion/index.html
@@ -16,7 +16,7 @@
   <!-- Encabezado (inicialmente oculto) -->
   <header class="encabezado oculto">
     <img src="img/logo.png" alt="Logo encabezado" class="logo-encabezado" />
-    <H1 class="nombre-pasteleria>MI DULCE BENDICIÒN 🎂</H1>
+    <h1 class="nombre-pasteleria">MI DULCE BENDICIÒN 🎂</h1>
   </header>
 
   <!-- Contenedor principal del catálogo -->
@@ -74,4 +74,3 @@
   <script src="main.js"></script>
 </body>
 </html>
-
