--- a/midulcebendicion/index.html
+++ b/midulcebendicion/index.html
@@ -10,12 +10,12 @@
 
   <!-- Logo de presentación -->
   <div id="intro">
-    <img src="imagen/logo.png" alt="Logo de presentación" class="logo-inicio" />
+    <img src="imagen/logotipo.png" alt="Logo de presentación" class="logo-inicio" />
   </div>
 
   <!-- Encabezado (inicialmente oculto) -->
   <header class="encabezado oculto">
-    <img src="imagen/logo.png" alt="Logo encabezado" class="logo-encabezado" />
+    <img src="imagen/logotipo.png" alt="Logo encabezado" class="logo-encabezado" />
     <h1 class="nombre-pasteleria">MI DULCE BENDICIÒN 🎂</h1>
   </header>
 
@@ -74,4 +74,5 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
