--- a/midulcebendicion/index.html
+++ b/midulcebendicion/index.html
@@ -10,12 +10,12 @@
 
   <!-- Logo de presentación -->
   <div id="intro">
-    <img src="imagen/logotipo.jpg" alt="Logo de presentación" class="logo-inicio" />
+    <img src="img/logotipo.jpg" alt="Logo de presentación" class="logo-inicio" />
   </div>
 
   <!-- Encabezado (inicialmente oculto) -->
   <header class="encabezado oculto">
-    <img src="imagen/logotipo.jpg" alt="Logo encabezado" class="logo-encabezado" />
+    <img src="img/logotipo.jpg" alt="Logo encabezado" class="logo-encabezado" />
     <h1 class="nombre-pasteleria">MI DULCE BENDICIÒN 🎂</h1>
   </header>
 
@@ -28,14 +28,14 @@
       <div class="productos">
         <!-- Producto 1 -->
         <div class="producto">
-          <img src="imagen/espátula.jpg" alt="Espátula Rosa" />
+          <img src="img/espátula.jpg" alt="Espátula Rosa" />
           <h3>Espátula Rosa</h3>
           <p>$3.500</p>
           <a href="https://wa.me/51922857548?text=Hola%2C%20quiero%20comprar%20la%20Espátula%20Rosa" target="_blank">Pedir por WhatsApp</a>
         </div>
         <!-- Producto 2 -->
         <div class="producto">
-          <img src="imagen/espátula.jpg" alt="Espátula Rosa" />
+          <img src="img/espátula.jpg" alt="Espátula Rosa" />
           <h3>Espátula Rosa</h3>
           <p>$3.500</p>
           <a href="https://wa.me/51922857548?text=Hola%2C%20quiero%20comprar%20la%20Espátula%20Rosa" target="_blank">Pedir por WhatsApp</a>
@@ -48,7 +48,7 @@
       <h2>🎀 Decoración</h2>
       <div class="productos">
         <div class="producto">
-          <img src="imagen/brillo.jpg" alt="Glitter Dorado" />
+          <img src="img/brillo.jpg" alt="Glitter Dorado" />
           <h3>Glitter Dorado</h3>
           <p>$5.000</p>
           <a href="https://wa.me/51922857548?text=Hola%2C%20quiero%20comprar%20el%20Glitter%20Dorado" target="_blank">Pedir por WhatsApp</a>
@@ -61,7 +61,7 @@
       <h2>📦 Empaques</h2>
       <div class="productos">
         <div class="producto">
-          <img src="imagen/caja-cupcakes.jpg" alt="Caja para cupcakes" />
+          <img src="img/caja-cupcakes.jpg" alt="Caja para cupcakes" />
           <h3>Caja para Cupcakes</h3>
           <p>$2.000</p>
           <a href="https://wa.me/51922857548?text=Hola%2C%20quiero%20comprar%20la%20Caja%20para%20Cupcakes" target="_blank">Pedir por WhatsApp</a>
@@ -74,6 +74,7 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
